// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Liveblog Snippet with liveblog power up Check render of liveblog posting object schema 1`] = `
<script
  dangerouslySetInnerHTML={
    Object {
      "__html": "{
  \\"@context\\": \\"https://schema.org\\",
  \\"@type\\": \\"LiveBlogPosting\\",
  \\"publisher\\": {
    \\"@type\\": \\"Organization\\",
    \\"name\\": \\"\\",
    \\"url\\": \\"https://www.lanacion.com.ar\\",
    \\"logo\\": {
      \\"@context\\": \\"https://schema.org\\",
      \\"@type\\": \\"ImageObject\\",
      \\"url\\": \\"https://arc-static.glanacion.com/resources/images/placeholderLN-600_amp.jpg$LATEST\\",
      \\"height\\": 60,
      \\"width\\": 600
    }
  },
  \\"about\\": {
    \\"@type\\": \\"Event\\",
    \\"name\\": \\"Paaawer ap dos\\",
    \\"startDate\\": \\"2022-06-15T15:50:21.667Z\\",
    \\"endDate\\": \\"2022-06-22T03:53:00.000Z\\",
    \\"location\\": {
      \\"@type\\": \\"place\\",
      \\"name\\": \\"LA NACION\\",
      \\"address\\": {
        \\"@type\\": \\"PostalAddress\\",
        \\"addressLocality\\": \\"Buenos Aires\\",
        \\"addressRegion\\": \\"AR\\"
      }
    },
    \\"description\\": \\"Lo pibe\\",
    \\"image\\": {
      \\"@context\\": \\"https://schema.org\\",
      \\"@type\\": \\"ImageObject\\",
      \\"url\\": \\"https://arc-static.glanacion.com/resources/images/placeholderLN-600_amp.jpg$LATEST\\",
      \\"height\\": \\"800\\",
      \\"width\\": \\"1200\\"
    }
  },
  \\"url\\": \\"https://www.lanacion.com.ar/ciencia/paaawer-ap-dos-nid15062022/\\",
  \\"@id\\": \\"#liveBlogPosting\\",
  \\"description\\": \\"Lo pibe\\",
  \\"coverageStartTime\\": \\"2022-06-15T15:50:21.667Z\\",
  \\"coverageEndTime\\": \\"2022-06-22T03:53:00.000Z\\",
  \\"headline\\": \\"Paaawer ap dos\\",
  \\"liveBlogUpdate\\": [
    {
      \\"@type\\": \\"BlogPosting\\",
      \\"headline\\": \\"Gym 1 Ciudad Plateada\\",
      \\"url\\": \\"https://www.lanacion.com.ar/ciencia/paaawer-ap-dos-nid15062022#parrafo_1\\",
      \\"@id\\": \\"#parrafo_1\\",
      \\"mainEntityOfPage\\": {
        \\"@type\\": \\"WebPage\\"
      },
      \\"datePublished\\": \\"2022-06-21T11:46:00.000Z\\",
      \\"dateModified\\": \\"2022-06-21T11:46:00.000Z\\",
      \\"articleBody\\": \\"El gimnasio de Plateada es el primer gimnasio de Kanto. Su tipo dominante es el roca. El líder de gimnasio es Brock. Los entrenadores que lo derrotan reciben la medalla Roca.\\",
      \\"image\\": {
        \\"@type\\": \\"ImageObject\\",
        \\"url\\": \\"https://arc-static.glanacion.com/resources/images/placeholderLN-600_amp.jpg$LATEST\\"
      },
      \\"author\\": {
        \\"@type\\": \\"PERSON\\",
        \\"name\\": \\"Redacción LA NACION\\"
      },
      \\"publisher\\": {
        \\"name\\": \\"LA NACION\\",
        \\"@type\\": \\"Organization\\"
      }
    },
    {
      \\"@type\\": \\"BlogPosting\\",
      \\"headline\\": \\"Gym 2 ciudad Celeste\\",
      \\"url\\": \\"https://www.lanacion.com.ar/ciencia/paaawer-ap-dos-nid15062022#parrafo_2\\",
      \\"@id\\": \\"#parrafo_2\\",
      \\"mainEntityOfPage\\": {
        \\"@type\\": \\"WebPage\\"
      },
      \\"datePublished\\": \\"2022-06-23T02:49:00.000Z\\",
      \\"dateModified\\": \\"2022-06-23T02:49:00.000Z\\",
      \\"articleBody\\": \\"El Gimnasio Celeste es el segundo de la región de Kanto. Se encuentra en Ciudad Celeste y su líder es Misty, experta en los Pokémon de tipo agua.\\",
      \\"image\\": {
        \\"@type\\": \\"ImageObject\\",
        \\"url\\": \\"https://arc-static.glanacion.com/resources/images/placeholderLN-600_amp.jpg$LATEST\\"
      },
      \\"author\\": {
        \\"@type\\": \\"PERSON\\",
        \\"name\\": \\"Redacción LA NACION\\"
      },
      \\"publisher\\": {
        \\"name\\": \\"LA NACION\\",
        \\"@type\\": \\"Organization\\"
      }
    },
    {
      \\"@type\\": \\"BlogPosting\\",
      \\"headline\\": \\"Gym 3 ciudad Carmin\\",
      \\"url\\": \\"https://www.lanacion.com.ar/ciencia/paaawer-ap-dos-nid15062022#parrafo_3\\",
      \\"@id\\": \\"#parrafo_3\\",
      \\"mainEntityOfPage\\": {
        \\"@type\\": \\"WebPage\\"
      },
      \\"datePublished\\": \\"2022-06-29T14:49:00.000Z\\",
      \\"dateModified\\": \\"2022-06-29T14:49:00.000Z\\",
      \\"articleBody\\": \\"El gimnasio Carmín (Vermilion Gym en inglés, クチバジム en japonés) es el tercer gimnasio de la región de Kanto. El líder de este gimnasio es un ex-soldado llamado Lt. Surge, y sus Pokémon son de tipo eléctrico. Se ubica en Ciudad Carmín.\\",
      \\"image\\": {
        \\"@type\\": \\"ImageObject\\",
        \\"url\\": \\"https://arc-static.glanacion.com/resources/images/placeholderLN-600_amp.jpg$LATEST\\"
      },
      \\"author\\": {
        \\"@type\\": \\"PERSON\\",
        \\"name\\": \\"Redacción LA NACION\\"
      },
      \\"publisher\\": {
        \\"name\\": \\"LA NACION\\",
        \\"@type\\": \\"Organization\\"
      }
    }
  ]
}",
    }
  }
  id="Schema_LiveBlog"
  type="application/ld+json"
/>
`;

exports[`Private - LN - nota - snippet - liveblog  Snapshot Snippet Liveblog 1`] = `
<script
  dangerouslySetInnerHTML={
    Object {
      "__html": "{
  \\"@context\\": \\"https://schema.org\\",
  \\"@type\\": \\"LiveBlogPosting\\",
  \\"publisher\\": {
    \\"@type\\": \\"Organization\\",
    \\"name\\": \\"\\",
    \\"url\\": \\"https://www.lanacion.com.ar\\",
    \\"logo\\": {
      \\"@context\\": \\"https://schema.org\\",
      \\"@type\\": \\"ImageObject\\",
      \\"url\\": \\"https://arc-static.glanacion.com/resources/images/placeholderLN-600_amp.jpg$LATEST\\",
      \\"height\\": 60,
      \\"width\\": 600
    }
  },
  \\"about\\": {
    \\"@type\\": \\"Event\\",
    \\"name\\": \\"Meta titulo\\",
    \\"startDate\\": \\"2020-06-25T19:39:44.527Z\\",
    \\"endDate\\": \\"2020-06-26T07:39:44.527Z\\",
    \\"location\\": {
      \\"@type\\": \\"place\\",
      \\"name\\": \\"LA NACION\\",
      \\"address\\": {
        \\"@type\\": \\"PostalAddress\\",
        \\"addressLocality\\": \\"Buenos Aires\\",
        \\"addressRegion\\": \\"AR\\"
      }
    },
    \\"description\\": \\"Esta es la prueba de la bajada en Foto al 100\\",
    \\"image\\": {
      \\"@context\\": \\"https://schema.org\\",
      \\"@type\\": \\"ImageObject\\",
      \\"url\\": \\"https://arc-static.glanacion.com/resources/images/placeholderLN-600_amp.jpg$LATEST\\",
      \\"height\\": \\"800\\",
      \\"width\\": \\"1200\\"
    }
  },
  \\"url\\": \\"https://www.lanacion.com.ar/arquitectura/nota-de-prueba-foto-al-100-nid25062020/\\",
  \\"@id\\": \\"#liveBlogPosting\\",
  \\"description\\": \\"Esta es la prueba de la bajada en Foto al 100\\",
  \\"coverageStartTime\\": \\"2020-06-25T19:39:44.527Z\\",
  \\"coverageEndTime\\": \\"2020-06-26T07:39:44.527Z\\",
  \\"headline\\": \\"Meta titulo\\",
  \\"liveBlogUpdate\\": [
    {
      \\"@type\\": \\"BlogPosting\\",
      \\"headline\\": \\"Nota de prueba Foto al 100\\",
      \\"url\\": \\"https://www.lanacion.com.ar/arquitectura/nota-de-prueba-foto-al-100-nid25062020#parrafo_1\\",
      \\"@id\\": \\"#parrafo_1\\",
      \\"mainEntityOfPage\\": {
        \\"@type\\": \\"WebPage\\"
      },
      \\"datePublished\\": \\"2020-06-25T20:39:38.448Z\\",
      \\"dateModified\\": \\"2020-06-25T20:39:38.448Z\\",
      \\"articleBody\\": \\"S<a href=\\\\\\"https://www.lanacion.com.ar/el-mundo/primer-latinoamericano-pasajero-argentino-del-crucero-japon-nid2331517\\\\\\" target=_blank>e trata del primer caso confirmado</a> de un latinoamericano diagnosticado con esta enfermedad que se haya anunciado hasta el momento. <a href=\\\\\\"https://www.lanacion.com.ar/el-mundo/de-crucero-de-lujo-a-carcel-flotante-el-drama-de-una-cuarentena-a-bordo-nid2331408\\\\\\" target=_blank>El crucero</a> , que llegó el lunes por la noche a las inmediaciones del puerto de <b>Yokohama </b>, al suroeste de Tokio, tiene unos <a href=\\\\\\"https://www.lanacion.com.ar/el-mundo/primer-latinoamericano-pasajero-argentino-del-crucero-japon-nid2331517\\\\\\" target=_blank><b>3.700 pasajeros</b></a> y tripulantes, de los cuales 273 se sometieron a las pruebas de detección. Permanecerían en cuarentena hasta el 19 de febrero.\\",
      \\"image\\": {
        \\"@type\\": \\"ImageObject\\",
        \\"url\\": \\"https://arc-static.glanacion.com/resources/images/placeholderLN-600_amp.jpg$LATEST\\"
      },
      \\"author\\": {
        \\"@type\\": \\"PERSON\\",
        \\"name\\": \\"Redacción LA NACION\\"
      },
      \\"publisher\\": {
        \\"name\\": \\"LA NACION\\",
        \\"@type\\": \\"Organization\\"
      }
    },
    {
      \\"@type\\": \\"BlogPosting\\",
      \\"headline\\": \\"Nota de prueba Foto al 100\\",
      \\"url\\": \\"https://www.lanacion.com.ar/arquitectura/nota-de-prueba-foto-al-100-nid25062020#parrafo_2\\",
      \\"@id\\": \\"#parrafo_2\\",
      \\"mainEntityOfPage\\": {
        \\"@type\\": \\"WebPage\\"
      },
      \\"datePublished\\": \\"2020-06-25T20:19:38.448Z\\",
      \\"dateModified\\": \\"2020-06-25T20:19:38.448Z\\",
      \\"articleBody\\": \\"<b>El nombre de Squeff </b>, muy cercana al kirchnerismo, comenzó a sonar en los pasillos de la Cancillería luego del traspié del Gobierno tras <a href=\\\\\\"https://www.lanacion.com.ar/politica/antes-del-viaje-alberto-fernandez-se-cayo-nid2324570\\\\\\" target=_blank>la caída sorpresiva de la postulación de Luis Bellando</a> , otro diplomático de carrera, para representar al país en la Santa Sede.\\",
      \\"image\\": {
        \\"@type\\": \\"ImageObject\\",
        \\"url\\": \\"https://arc-static.glanacion.com/resources/images/placeholderLN-600_amp.jpg$LATEST\\"
      },
      \\"author\\": {
        \\"@type\\": \\"PERSON\\",
        \\"name\\": \\"Redacción LA NACION\\"
      },
      \\"publisher\\": {
        \\"name\\": \\"LA NACION\\",
        \\"@type\\": \\"Organization\\"
      }
    },
    {
      \\"@type\\": \\"BlogPosting\\",
      \\"headline\\": \\"Nota de prueba Foto al 100\\",
      \\"url\\": \\"https://www.lanacion.com.ar/arquitectura/nota-de-prueba-foto-al-100-nid25062020#parrafo_3\\",
      \\"@id\\": \\"#parrafo_3\\",
      \\"mainEntityOfPage\\": {
        \\"@type\\": \\"WebPage\\"
      },
      \\"datePublished\\": \\"2020-06-25T20:09:38.448Z\\",
      \\"dateModified\\": \\"2020-06-25T20:09:38.448Z\\",
      \\"articleBody\\": \\"En un lugar de la Mancha, de cuyo nombre no quiero acordarme, no ha mucho tiempo que vivía un hidalgo de los de lanza en astillero.\\",
      \\"image\\": {
        \\"@type\\": \\"ImageObject\\",
        \\"url\\": \\"https://arc-static.glanacion.com/resources/images/placeholderLN-600_amp.jpg$LATEST\\"
      },
      \\"author\\": {
        \\"@type\\": \\"PERSON\\",
        \\"name\\": \\"Redacción LA NACION\\"
      },
      \\"publisher\\": {
        \\"name\\": \\"LA NACION\\",
        \\"@type\\": \\"Organization\\"
      }
    },
    {
      \\"@type\\": \\"BlogPosting\\",
      \\"headline\\": \\"Nota de prueba Foto al 100\\",
      \\"url\\": \\"https://www.lanacion.com.ar/arquitectura/nota-de-prueba-foto-al-100-nid25062020#parrafo_4\\",
      \\"@id\\": \\"#parrafo_4\\",
      \\"mainEntityOfPage\\": {
        \\"@type\\": \\"WebPage\\"
      },
      \\"datePublished\\": \\"2020-06-25T19:59:38.448Z\\",
      \\"dateModified\\": \\"2020-06-25T19:59:38.448Z\\",
      \\"articleBody\\": \\"Quieren decir que tenía el sobrenombre de Quijada, o Quesada, que en esto hay alguna diferencia en los autores que deste caso escriben.\\",
      \\"image\\": {
        \\"@type\\": \\"ImageObject\\",
        \\"url\\": \\"https://arc-static.glanacion.com/resources/images/placeholderLN-600_amp.jpg$LATEST\\"
      },
      \\"author\\": {
        \\"@type\\": \\"PERSON\\",
        \\"name\\": \\"Redacción LA NACION\\"
      },
      \\"publisher\\": {
        \\"name\\": \\"LA NACION\\",
        \\"@type\\": \\"Organization\\"
      }
    },
    {
      \\"@type\\": \\"BlogPosting\\",
      \\"headline\\": \\"Nota de prueba Foto al 100\\",
      \\"url\\": \\"https://www.lanacion.com.ar/arquitectura/nota-de-prueba-foto-al-100-nid25062020#parrafo_5\\",
      \\"@id\\": \\"#parrafo_5\\",
      \\"mainEntityOfPage\\": {
        \\"@type\\": \\"WebPage\\"
      },
      \\"datePublished\\": \\"2020-06-25T19:49:38.448Z\\",
      \\"dateModified\\": \\"2020-06-25T19:49:38.448Z\\",
      \\"articleBody\\": \\"<b>El nombre de Squeff </b>, muy cercana al kirchnerismo, comenzó a sonar en los pasillos de la Cancillería luego del traspié del Gobierno tras <a href=\\\\\\"https://www.lanacion.com.ar/politica/antes-del-viaje-alberto-fernandez-se-cayo-nid2324570\\\\\\" target=_blank>la caída sorpresiva de la postulación de Luis Bellando</a> , otro diplomático de carrera, para representar al país en la Santa Sede.\\",
      \\"image\\": {
        \\"@type\\": \\"ImageObject\\",
        \\"url\\": \\"https://arc-static.glanacion.com/resources/images/placeholderLN-600_amp.jpg$LATEST\\"
      },
      \\"author\\": {
        \\"@type\\": \\"PERSON\\",
        \\"name\\": \\"Redacción LA NACION\\"
      },
      \\"publisher\\": {
        \\"name\\": \\"LA NACION\\",
        \\"@type\\": \\"Organization\\"
      }
    },
    {
      \\"@type\\": \\"BlogPosting\\",
      \\"headline\\": \\"Nota de prueba Foto al 100\\",
      \\"url\\": \\"https://www.lanacion.com.ar/arquitectura/nota-de-prueba-foto-al-100-nid25062020#parrafo_6\\",
      \\"@id\\": \\"#parrafo_6\\",
      \\"mainEntityOfPage\\": {
        \\"@type\\": \\"WebPage\\"
      },
      \\"datePublished\\": \\"2020-06-25T19:39:38.448Z\\",
      \\"dateModified\\": \\"2020-06-25T19:39:38.448Z\\",
      \\"articleBody\\": \\"<b>El nombre de Squeff </b>, muy cercana al kirchnerismo, comenzó a sonar en los pasillos de la Cancillería luego del traspié del Gobierno tras <a href=\\\\\\"https://www.lanacion.com.ar/politica/antes-del-viaje-alberto-fernandez-se-cayo-nid2324570\\\\\\" target=_blank>la caída sorpresiva de la postulación de Luis Bellando</a> , otro diplomático de carrera, para representar al país en la Santa Sede.\\",
      \\"image\\": {
        \\"@type\\": \\"ImageObject\\",
        \\"url\\": \\"https://arc-static.glanacion.com/resources/images/placeholderLN-600_amp.jpg$LATEST\\"
      },
      \\"author\\": {
        \\"@type\\": \\"PERSON\\",
        \\"name\\": \\"Redacción LA NACION\\"
      },
      \\"publisher\\": {
        \\"name\\": \\"LA NACION\\",
        \\"@type\\": \\"Organization\\"
      }
    }
  ]
}",
    }
  }
  id="Schema_LiveBlog"
  type="application/ld+json"
/>
`;
